--- a/FynzoSurvey/ViewControllers/Form/CircleCheckBoxCollectionViewCell/CheckBoxInnerCollectionViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/CircleCheckBoxCollectionViewCell/CheckBoxInnerCollectionViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="radio_empty" translatesAutoresizingMaskIntoConstraints="NO" id="COV-gs-2hL">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty_square_checkbox" translatesAutoresizingMaskIntoConstraints="NO" id="COV-gs-2hL">
                         <rect key="frame" x="15" y="10" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="o1N-au-g0r"/>
@@ -51,6 +51,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="radio_empty" width="64" height="64"/>
+        <image name="empty_square_checkbox" width="20" height="20"/>
     </resources>
 </document>
