--- a/FynzoSurvey/ViewControllers/Home/Report/ResponseDetail/ResponseDetailTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Home/Report/ResponseDetail/ResponseDetailTableViewCell.xib
@@ -47,6 +47,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="titleLabel" destination="iId-pp-3gb" id="ORS-cb-4mk"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="111.49553571428571"/>
         </tableViewCell>
     </objects>
