--- a/FynzoSurvey/ViewControllers/Home/Report/ResponseDetail/ResponseDetailTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Home/Report/ResponseDetail/ResponseDetailTableViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,38 +20,70 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Awr-d4-Pwj">
-                        <rect key="frame" x="16" y="5" width="288" height="9.5"/>
-                        <string key="text">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </string>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iId-pp-3gb">
-                        <rect key="frame" x="16" y="29.5" width="288" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="ahw-2o-qBE"/>
-                        </constraints>
+                        <rect key="frame" x="16" y="10" width="288" height="49.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cYm-6f-dSJ" customClass="CosmosView" customModule="Cosmos">
+                        <rect key="frame" x="16" y="20" width="288" height="30"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="5kJ-xh-f2F"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="emptyBorderColor">
+                                <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="filledBorderColor">
+                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="starSize">
+                                <real key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="totalStars">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="emptyColor">
+                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
+                                <color key="value" name="appThemeColor"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="emptyBorderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="filledBorderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Awr-d4-Pwj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="3hF-vW-quS"/>
+                    <constraint firstItem="cYm-6f-dSJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="3Nv-99-bFV"/>
                     <constraint firstAttribute="trailing" secondItem="iId-pp-3gb" secondAttribute="trailing" constant="16" id="GkT-4d-N3j"/>
+                    <constraint firstItem="iId-pp-3gb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="aRg-LP-t6H"/>
                     <constraint firstAttribute="bottom" secondItem="iId-pp-3gb" secondAttribute="bottom" constant="10" id="beV-gq-q1j"/>
-                    <constraint firstAttribute="trailing" secondItem="Awr-d4-Pwj" secondAttribute="trailing" constant="16" id="cGJ-HC-luf"/>
-                    <constraint firstItem="iId-pp-3gb" firstAttribute="top" secondItem="Awr-d4-Pwj" secondAttribute="bottom" constant="15" id="irk-iB-bMx"/>
-                    <constraint firstItem="Awr-d4-Pwj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="n6k-7P-2hR"/>
+                    <constraint firstItem="cYm-6f-dSJ" firstAttribute="leading" secondItem="iId-pp-3gb" secondAttribute="leading" id="fqW-r2-hYE"/>
+                    <constraint firstItem="cYm-6f-dSJ" firstAttribute="trailing" secondItem="iId-pp-3gb" secondAttribute="trailing" id="lkA-VZ-wD9"/>
                     <constraint firstItem="iId-pp-3gb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="uto-Ie-jVo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="starView" destination="cYm-6f-dSJ" id="pu4-ho-kFc"/>
                 <outlet property="titleLabel" destination="iId-pp-3gb" id="ORS-cb-4mk"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="111.49553571428571"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="appThemeColor">
+            <color red="0.27058823529411763" green="0.59999999999999998" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
